--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -6,7 +6,7 @@
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; img-src 'self' https://*.steamstatic.com data:; script-src 'self'; style-src 'self' 'unsafe-inline';"
+      content="default-src 'self'; img-src 'self' https://steamcdn-a.akamaihd.net https://*.steamstatic.com data:; script-src 'self'; style-src 'self' 'unsafe-inline';"
     />
   </head>
 
