--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -6,10 +6,9 @@
     <!-- https://developer.mozilla.org/en-US/docs/Web/HTTP/CSP -->
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; img-src 'self' https://steamcdn-a.akamaihd.net https://*.steamstatic.com data:; script-src 'self'; style-src 'self' 'unsafe-inline';"
+      content="default-src 'self'; img-src 'self' https://cdn.cloudflare.steamstatic.com https://steamcdn-a.akamaihd.net https://*.steamstatic.com data:; script-src 'self'; style-src 'self' 'unsafe-inline';"
     />
   </head>
-
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
